5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1593_2908.log
== SUBMITION (2019-03-26 10:11:42) 
-- CODE:
var1=float(input());
var2=float(input());
var3=float(input());

var4=((var1**2)+(var2**2)+(var3**2))/var1+var2+var3;

print(var4);

-- EXECUTION TIME:
0.165453
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
151.25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2187.127659574468
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
372.0444444444445
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:11:57) 
-- CODE:
var1=float(input());
var2=float(input());
var3=float(input());

var4=((var1**2)+(var2**2)+(var3**2))/var1+var2+var3;

print(round(var4,7);

-- EXECUTION TIME:
0.201767
-- ERROR:
  File "/home/codebench/codes/1593/2908/main.py", line 7
    print(round(var4,7);
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:12:14) 
-- CODE:
var1=float(input());
var2=float(input());
var3=float(input());

var4=((var1**2)+(var2**2)+(var3**2))/var1+var2+var3;

print(round(var4,7);

-- ERROR:
File "XXXX", line 7
    print(round(var4,7);
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:13:27) 
-- CODE:
var1=float(input());
var2=float(input());
var3=float(input());

var4=((var1**2)+(var2**2)+(var3**2))/var1+var2+var3;

print(round(var4,7);

-- ERROR:
File "XXXX", line 7
    print(round(var4,7);
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:13:57) 
-- CODE:
var1=float(input());
var2=float(input());
var3=float(input());

var4=((var1**2)+(var2**2)+(var3**2))/(var1+var2+var3);

print(round(var4,7);

-- EXECUTION TIME:
0.132485
-- ERROR:
  File "/home/codebench/codes/1593/2908/main.py", line 7
    print(round(var4,7);
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:14:00) 
-- CODE:
var1=float(input());
var2=float(input());
var3=float(input());

var4=((var1**2)+(var2**2)+(var3**2))/(var1+var2+var3);

print(round(var4,7);

-- ERROR:
File "XXXX", line 7
    print(round(var4,7);
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:14:18) 
-- CODE:
var1=float(input());
var2=float(input());
var3=float(input());

var4=((var1**2)+(var2**2)+(var3**2))/(var1+var2+var3);

print(round(var4,7));

-- EXECUTION TIME:
0.130316
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
